# luminol-bot

./: .gitignore  Cargo.toml  README.md
res/: memory.txt
src/: commands.rs  handler.rs  lib.rs  main.rs
src/commands/: help.rs  mod.rs
src/commands/audio/: join.rs  leave.rs  mod.rs  play.rs  skip.rs  stop.rs
src/commands/games/: bagels.rs  mod.rs
src/commands/general/: ask.rs  hitomezashi.rs  mod.rs  ping.rs  remind.rs
src/commands/openai/: chat.rs  complete.rs  image.rs  memorise.rs  mod.rs  vision.rs
src/games/: bagels.rs
src/general/: hitomezashi.rs  mod.rs
